# smartypants

./: .gitignore  commands.sh  db.py  main.py  manage.py  pyproject.toml  requirements.txt  schema_dump.sql  twilio_management.py
kappa/: asgi.py  settings.py  sms.py  urls.py  views.py  wsgi.py
mysite/: asgi.py  settings.py  urls.py  wsgi.py
parade/: demo.jinja
smartypants/: answer.py  create_purchase_offers_table.sql  create_purchases_table.sql  experts.py  pay.py  sms.py  summaries.py
src/smartypants/: answer.py  base.py  main.py  pay.py  summaries.py
src/smartypants.egg-info/: PKG-INFO  SOURCES.txt
